RESOLVED FIXED282168
Fix exceptions in WasmOMGIRGenerator32_64
https://bugs.webkit.org/show_bug.cgi?id=282168
Summary Fix exceptions in WasmOMGIRGenerator32_64
Angelos Oikonomopoulos
Reported 2024-10-28 05:29:05 PDT
Need to properly initialize the EncodedJSValue.
Attachments
Angelos Oikonomopoulos
Comment 1 2024-10-28 05:34:14 PDT
EWS
Comment 2 2024-10-28 09:59:49 PDT
Committed 285766@main (bca4ade201f5): <https://commits.webkit.org/285766@main> Reviewed commits have been landed. Closing PR #35790 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-28 10:01:43 PDT
Simon Taylor
Comment 4 2025-06-19 03:33:27 PDT
Would this be responsible for the issue with -fwasm-exception that affected our codebase in iOS 18.0? I reported more details here on the emscripten github: https://github.com/emscripten-core/emscripten/issues/24600 Emscripten are willing to explore adding a workaround if it's possible to avoid triggering this bug, but will likely need some more input from the webkit team about the specific triggers and whether a workaround would be possible. Thanks
Angelos Oikonomopoulos
Comment 5 2025-06-19 03:42:50 PDT
This issue and fix are only relevant for 32-bit platforms and this code has never been on by default on them in any case. So unfortunately the answer to your question would be "no".
Note You need to log in before you can comment on or make changes to this bug.