Fix exceptions in WasmOMGIRGenerator32_64 https://bugs.webkit.org/show_bug.cgi?id=282168

Reviewed by Justin Michaud.

Generate EncodedJSValue from the pointer supplied by
buildEntryBufferForCatch.

* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::OMGIRGenerator::emitCatchImpl):
(JSC::Wasm::OMGIRGenerator::emitCatchTableImpl):
(JSC::Wasm::OMGIRGenerator::addRethrow):
(JSC::Wasm::OMGIRGenerator::addThrowRef):

Canonical link: https://commits.webkit.org/285766@main